feat: wire mosquito scenario to wingbeat emitters